{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 91,
  "lineage": "8b634a57-088a-fe0c-3adf-fcda7759ec37",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-07b6e060b184ef263",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b6e060b184ef263",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c68c9b31332160f9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250324164422810100000001",
            "name_prefix": "terraform-",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05be79c58f9e640a0",
            "arn": "arn:aws:ec2:us-east-1:992382545251:elastic-ip/eipalloc-05be79c58f9e640a0",
            "association_id": "eipassoc-057e5932948284c6b",
            "domain": "vpc",
            "id": "eipalloc-05be79c58f9e640a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08c36d2660e619c9d",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-54-173-250-145.compute-1.amazonaws.com",
            "public_ip": "54.173.250.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:internet-gateway/igw-05ad4478b2aa7fc31",
            "id": "igw-05ad4478b2aa7fc31",
            "owner_id": "992382545251",
            "tags": {
              "Name": "igw-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "igw-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05be79c58f9e640a0",
            "association_id": "eipassoc-057e5932948284c6b",
            "connectivity_type": "public",
            "id": "nat-0903dea601e9ea0d4",
            "network_interface_id": "eni-08c36d2660e619c9d",
            "private_ip": "10.0.1.202",
            "public_ip": "54.173.250.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e81eeb7fbdd3c99",
            "tags": {
              "Name": "nat-gateway-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "nat-gateway-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_AT",
            "module.vpc.aws_internet_gateway.igw_AT",
            "module.vpc.aws_subnet.public_subnet_AT",
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03788ddad5ad917211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0903dea601e9ea0d4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03788ddad5ad91721",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_AT",
            "module.vpc.aws_internet_gateway.igw_AT",
            "module.vpc.aws_nat_gateway.nat_gateway_AT",
            "module.vpc.aws_route_table.route_table_private_AT",
            "module.vpc.aws_subnet.public_subnet_AT",
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ad4478b2aa7fc31",
            "id": "r-rtb-03e6ac7b0d7833df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e6ac7b0d7833df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_AT",
            "module.vpc.aws_route_table.route_table_public_AT",
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-03788ddad5ad91721",
            "id": "rtb-03788ddad5ad91721",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0903dea601e9ea0d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "private-route-table-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:route-table/rtb-03e6ac7b0d7833df7",
            "id": "rtb-03e6ac7b0d7833df7",
            "owner_id": "992382545251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ad4478b2aa7fc31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "public-route-table-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "timeouts": null,
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717b3a7ac7d8c948",
            "route_table_id": "rtb-03788ddad5ad91721",
            "subnet_id": "subnet-04e8711fa5f87ec5b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_private_AT",
            "module.vpc.aws_subnet.private_subnet_AT",
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00251db5a078dd052",
            "route_table_id": "rtb-03e6ac7b0d7833df7",
            "subnet_id": "subnet-06e81eeb7fbdd3c99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_public_AT",
            "module.vpc.aws_subnet.public_subnet_AT",
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-04e8711fa5f87ec5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e8711fa5f87ec5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:subnet/subnet-06e81eeb7fbdd3c99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e81eeb7fbdd3c99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382545251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "public-subnet-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "vpc_id": "vpc-0506a10f377b91463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC_AT"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_AT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:vpc/vpc-0506a10f377b91463",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d6a25f046676019",
            "default_route_table_id": "rtb-0927dda6d3e8c44d6",
            "default_security_group_id": "sg-0c723037d18dd7950",
            "dhcp_options_id": "dopt-0c7c69517f17e01b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0506a10f377b91463",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0927dda6d3e8c44d6",
            "owner_id": "992382545251",
            "tags": {
              "Name": "VPC-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            },
            "tags_all": {
              "Name": "VPC-AT",
              "Owner": "adibeker",
              "owner": "toharbarazi"
            }
          }
        }
      ]
    }
  ]
}